--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@ body {
 	background-color: antiquewhite;
 }
 
+#root{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 button {
 	margin-right: 10px;
 }
